--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-material-ui-carousel": "^3.4.2"
   }
 }
